<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/ic_back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffe1e1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvYoutube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/text_watch_youtube"
                        android:textColor="#ffec2d2d"
                        android:textSize="12sp"
                        app:drawableStartCompat="@drawable/ic_play" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFDA9C"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvShareRecipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/text_share_recipe"
                        android:textColor="#A66B08"
                        android:textSize="12sp"
                        app:drawableStartCompat="@drawable/ic_share" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#C1F8CE"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/text_source"
                        android:textColor="#ff2a7e2f"
                        android:textSize="12sp"
                        app:drawableStartCompat="@drawable/ic_link" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgThumb"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="end|center"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="-90dp"
                        android:elevation="5dp"
                        android:src="@drawable/placeholder"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="2dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-80dp"
                        android:background="@drawable/bg_circle_radius"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/text_ingredients"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.0"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvIngredients"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.0"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvMeasure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/text_instructions"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvInstructions"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="15dp"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>